# sq

./: .gitignore  AGENTS.md  Cargo.toml  Gemfile  README.md  Rakefile  dev.yml  sift.gemspec
.beads/: interactions.jsonl
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
agent-docs/: general.md  githooks.md
doc/: sq-vs-beads.md
doc/specs/: EXPLORATION.md
exe/: sift  sq
lib/: claude_client.rb  diff_parser.rb  sift.rb
lib/sift/: agent_runner.rb  cli.rb  client.rb  config.rb  diff_parser.rb  editor.rb  git.rb  git_actions.rb  log.rb  prime.rb  queue.rb  review_loop.rb  roast.rb  session_transcript.rb  source_viewer.rb  statusline.rb  version.rb  worktree.rb
scripts/: generate-homebrew-formula.sh
skills/sq/: SKILL.md
skills/sq-task-tracking/: SKILL.md
sq/: Cargo.toml  README.md
sq-rust/: Cargo.toml
sq-rust/src/: lib.rs  main.rs  queue_path.rs
sq-rust/src/cli/: formatters.rs  mod.rs
sq-rust/src/cli/commands/: add.rs  edit.rs  list.rs  mod.rs  prime.rs  rm.rs  show.rs
sq-rust/src/queue/: mod.rs
sq-rust/tests/: cli_integration.rs  queue_parity.rs
sq/src/: collect.rs  lib.rs  main.rs
sq/tests/: cli_integration.rs  queue_parity.rs
src/: collect.rs  lib.rs  main.rs  queue_path.rs
src/cli/: formatters.rs  help.rs  mod.rs
src/collect/: rg.rs
src/queue/: mod.rs
test/: test_helper.rb
test/fixtures/: generate_queue.rb  queue.jsonl
test/sift/: agent_runner_test.rb  config_test.rb  dry_client_test.rb  editor_test.rb  git_test.rb  log_test.rb  (+6 more)
tests/: cli_integration.rs  queue_parity.rs
tmp/: release-v0.7.0.md
(+67 files in other folders)
