[package]
name = "sq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
rustix = { version = "0.38", features = ["fs"] }
anyhow = "1.0"
thiserror = "2.0"
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
